--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>GOOD Diagrams (Example)</title>
-        <script type="text/javascript" src="good_diagram.js"></script>
-        <link rel="stylesheet" href="style.css" />
+        <script type="text/javascript" src="javascript/good_diagram.js"></script>
+        <link rel="stylesheet" href="javascript/style.css" />
     </head>
     <body>
         <h1>GOOD diagrams</h1>
@@ -20,5 +20,5 @@
         </div>
         <div id="svgContainer" margin-top="100px"></div>
     </body>
-    <script type="module" src="setup.js"></script>
+    <script type="module" src="javascript/setup.js"></script>
 </html>
