add support for additional activation symbols

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <input type="number" id="countInputs" name="quantity" min="1" max="10" value="1">
             <label for="countLayers">Number of layers:</label>
             <input type="number" id="countLayers" name="quantity" min="1" max="10" value="1">
+            <label for="activationEntry" style="cursor:pointer;" id="activationEntryLabel">Add an activation symbol:</label>
+            <input type="text" id="activationEntry" maxlength="2">
+            <input type="submit" id="submitActivationEntry" value="Add">
             <div id="networkContainer"></div>
             <input type="submit" id="submitNetwork" value="Build diagram">
             <button id="downloadButton"> Download diagram </button>
